--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "author": "Matteo Collina <hello@matteocollina.com>",
   "license": "MIT",
   "dependencies": {
-    "mqtt": "~0.3.8",
+    "mqtt": "adamvr/MQTT.js#no-bops",
     "websocket-stream": "~0.5.1",
     "ws": "~0.4.31"
   },
